--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -569,7 +569,10 @@
                         <div style="margin: 20px 0; padding: 20px; background: linear-gradient(135deg, #FF8C42 0%, #FF6B35 100%); color: white; border-radius: 8px; text-align: center; box-shadow: 0 4px 15px rgba(255, 107, 53, 0.3);">
                             <h4 style="margin: 0 0 10px 0; font-size: 18px;">📱 Track Your Progress</h4>
                             <p style="margin: 0 0 15px 0; font-size: 14px; line-height: 1.5;">Access our comprehensive weight management app to track your nutrition, monitor your progress, and stay connected with your wellness coach.</p>
-                            <a href="#contact" style="display: inline-block; background: white; color: #FF6B35; padding: 12px 30px; border-radius: 25px; text-decoration: none; font-weight: bold; font-size: 16px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); transition: all 0.3s ease;">Download Our App</a>
+                            <!-- UPDATE THIS LINK: Replace #contact with your Netlify app URL after deployment -->
+                            <!-- Example: https://tracker.garciafamilymedicine.care or https://app.garciafamilymedicine.care -->
+                            <a href="#contact" target="_blank" rel="noopener noreferrer" style="display: inline-block; background: white; color: #FF6B35; padding: 12px 30px; border-radius: 25px; text-decoration: none; font-weight: bold; font-size: 16px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); transition: all 0.3s ease;">Start Tracking Now</a>
+                            <p style="margin: 15px 0 0 0; font-size: 12px; opacity: 0.9;">✨ Free for all Garcia Family Medicine patients</p>
                         </div>
                         
                         <button class="read-more-btn" onclick="toggleReadMore('weight-more')">Learn More</button>
