Add tracker button to homepage

--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
                 <p class="hero-subtitle">Blue Springs, Jackson County & KC Metro</p>
                 <p class="hero-description">Treating the whole patient: Spirit, Body, and Soul. Available 24/7 for your healthcare needs.</p>
                 <a href="tel:816-427-5320" class="hero-button">Call (816) 427-5320</a>
+                <a href="https://tracker.garciafamilymedicine.care" class="hero-button" target="_blank">Track Your Progress</a>
             </div>
         </div>
 
