--- a/Index.html
+++ b/Index.html
@@ -145,7 +145,7 @@
                 <h1 class="hero-title">Independent Medical Evaluations</h1>
                 <p class="hero-subtitle">Professional & Comprehensive Assessments</p>
                 <p class="hero-description">Expert medical evaluations for legal and insurance cases. Thorough, objective assessments you can trust.</p>
-                <a href="#contact" class="hero-button">Schedule Evaluation</a>
+                <a href="#contact" class="hero-button">Schedule Evaluation</a><a href="https://tracker.garciafamilymedicine.care" class="hero-button" target="_blank">Track Your Progress</a>
             </div>
         </div>
 
