--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -571,7 +571,7 @@
                             <p style="margin: 0 0 15px 0; font-size: 14px; line-height: 1.5;">Access our comprehensive weight management app to track your nutrition, monitor your progress, and stay connected with your wellness coach.</p>
                             <!-- UPDATE THIS LINK: Replace #contact with your Netlify app URL after deployment -->
                             <!-- Example: https://tracker.garciafamilymedicine.care or https://app.garciafamilymedicine.care -->
-                            <a href="#contact" target="_blank" rel="noopener noreferrer" style="display: inline-block; background: white; color: #FF6B35; padding: 12px 30px; border-radius: 25px; text-decoration: none; font-weight: bold; font-size: 16px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); transition: all 0.3s ease;">Start Tracking Now</a>
+                            <a href="https://tracker.garciafamilymedicine.care" target="_blank" rel="noopener noreferrer" style="display: inline-block; background: white; color: #FF6B35; padding: 12px 30px; border-radius: 25px; text-decoration: none; font-weight: bold; font-size: 16px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); transition: all 0.3s ease;">Start Tracking Now</a>
                             <p style="margin: 15px 0 0 0; font-size: 12px; opacity: 0.9;">✨ Free for all Garcia Family Medicine patients</p>
                         </div>
                         
