--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -54,7 +54,7 @@
       "url": "https://www.garciafamilymedicine.care",
       "telephone": "+1-816-427-5320",
       "faxNumber": "+1-888-807-2718",
-      "email": "admin@garciafamilymedicine.care",
+      "email": "gigi@garciafamilymedicine.care",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "801 NW Saint Mary's Drive, Suite 209",
@@ -872,7 +872,7 @@
                         <div class="contact-icon">&#9993;</div>
                         <div>
                             <div class="contact-label">Email</div>
-                            <div class="contact-value"><a href="mailto:admin@garciafamilymedicine.care">admin@garciafamilymedicine.care</a></div>
+                            <div class="contact-value"><a href="mailto:gigi@garciafamilymedicine.care">gigi@garciafamilymedicine.care</a></div>
                         </div>
                     </div>
 
