--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -182,6 +182,25 @@
     </div>
 </section>
 
+<!-- Mission Statement Section -->
+<section class="mission-section" style="background: linear-gradient(135deg, #2C5282 0%, #E67E22 100%); padding: 60px 20px; color: white; text-align: center;">
+    <div class="container" style="max-width: 900px; margin: 0 auto;">
+        <h2 style="color: white; font-size: 2.5rem; margin-bottom: 25px; font-weight: 700;">Our Mission</h2>
+        <p style="font-size: 1.3rem; line-height: 1.8; margin-bottom: 20px; font-weight: 300;">
+            Obesity isn't just a medical condition—it's a challenge affecting our families, our friends, our neighbors, and our entire community. Every day, we see people we love struggling with their health, their confidence, and their future.
+        </p>
+        <p style="font-size: 1.3rem; line-height: 1.8; margin-bottom: 20px; font-weight: 300;">
+            At Garcia Family Medicine, our mission is to combat obesity right here in our community—one person, one family, one neighborhood at a time. We have to start somewhere. And that somewhere is with you.
+        </p>
+        <p style="font-size: 1.4rem; line-height: 1.8; font-weight: 500; font-style: italic;">
+            We're not just treating a number on a scale. We're helping restore health, rebuild confidence, and reclaim lives. Because when you thrive, your family thrives. When families thrive, neighborhoods thrive. And when neighborhoods thrive, our entire community becomes stronger.
+        </p>
+        <p style="font-size: 1.2rem; margin-top: 30px; font-weight: 400;">
+            Let's start this journey together. For you. For your loved ones. For our community. 💙
+        </p>
+    </div>
+</section>
+
 <!-- Team Section -->
 <section class="team-section">
     <div class="container">
