--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -246,7 +246,7 @@
 
                 <div class="team-card">
                     <div class="team-photo-container">
-                        <img src="Gigii_Orange.png" alt="Gigi" style="width: 100%; height: 100%; object-fit: cover; object-position: center top; border-radius: 8px;">
+                        <img src="Gigi_Orange.png" alt="Gigi" style="width: 100%; height: 100%; object-fit: cover; object-position: center top; border-radius: 8px;">
                     </div>
                     <div class="team-content">
                         <h3 class="team-name">Gigi</h3>
