--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -33,7 +32,7 @@
     <!-- Hero Carousel -->
     <section class="carousel-section" id="home">
         <div class="carousel-container">
-            <div class="carousel-slide active" style="background-image: url('fall_into_confidence3_png.jpg');">
+            <div class="carousel-slide active" style="background-image: url('CoreLift_Confidence_with_Emsella.png');">
                 <div class="carousel-overlay"></div>
                 <div class="carousel-content">
                     <h2>CoreLift Pelvic Health</h2>
@@ -313,7 +312,7 @@
                     <a href="tel:816-555-0100">(816) 555-0100</a></p>
                     
                     <p><strong>Email:</strong><br>
-                    <a href="mailto:info@garciafamilymedicine.care">info@garciafamilymedicine.care</a></p>
+                    <a href="/cdn-cgi/l/email-protection#81e8efe7eec1e6e0f3e2e8e0e7e0ece8edf8ece4e5e8e2e8efe4afe2e0f3e4"><span class="__cf_email__" data-cfemail="bbd2d5ddd4fbdcdac9d8d2dadddad6d2d7c2d6dedfd2d8d2d5de95d8dac9de">[email&#160;protected]</span></a></p>
                     
                     <p><strong>Hours:</strong><br>
                     Monday - Friday: 9:00 AM - 5:00 PM<br>
@@ -371,10 +370,4 @@
                 <li>✓ Ongoing support & accountability</li>
             </ul>
             <a href="#contact" class="btn popup-btn" onclick="closePopup()">Claim Your $27 Offer</a>
-            <p class="popup-footer">Limited time offer for new weight management patients</p>
-        </div>
-    </div>
-
-    <script src="script.js"></script>
-</body>
-</html>
+            <p cla
