--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -139,6 +139,28 @@
                         <p class="team-bio">Gigi brings passion and dedication to every aspect of patient care at Garcia Family Medicine. As Practice Manager and Wellness Coach, she ensures that every patient receives compassionate support throughout their healthcare journey. Gigi is also the founder of gigiSafeHOUSE, a nonprofit dedicated to removing barriers to healthcare access.</p>
                     </div>
                 </div>
+
+                <div class="team-card">
+                    <div class="team-photo">
+                        <img src="marisela.jpg" alt="Marisela">
+                    </div>
+                    <div class="team-info">
+                        <h3>Marisela</h3>
+                        <p class="team-title">Medical Assistant & Translator</p>
+                        <p class="team-bio">Marisela provides compassionate medical assistance and bilingual support to ensure all patients receive quality care in their preferred language. Her expertise in both clinical support and translation services helps bridge communication gaps and creates a welcoming environment for our diverse patient community.</p>
+                    </div>
+                </div>
+
+                <div class="team-card">
+                    <div class="team-photo">
+                        <img src="maria.jpg" alt="Maria">
+                    </div>
+                    <div class="team-info">
+                        <h3>Maria</h3>
+                        <p class="team-title">Patient Services Coordinator</p>
+                        <p class="team-bio">Maria is the friendly voice you'll hear when you call Garcia Family Medicine. She ensures every patient interaction is warm and professional, coordinating appointments, answering questions, and making sure your experience with our practice is smooth from the very first call.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
