--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -136,7 +136,7 @@
                     <div class="team-info">
                         <h3>Gigi</h3>
                         <p class="team-title">Practice Manager & Wellness Coach</p>
-                        <p class="team-bio">Gigi brings passion and dedication to every aspect of patient care at Garcia Family Medicine. As Practice Manager and Wellness Coach, she ensures that every patient receives compassionate support throughout their healthcare journey. Gigi is also the founder of gigiSafeHOUSE, a nonprofit dedicated to removing barriers to healthcare access.</p>
+                        <p class="team-bio">Gigi brings passion and dedication to every aspect of patient care at Garcia Family Medicine. As Practice Manager and Wellness Coach, she ensures that every patient receives compassionate support throughout their healthcare journey. Gigi is also the founder of <a href="#gigisafehouse">gigiSafeHOUSE</a>, a nonprofit dedicated to removing barriers to healthcare access.</p>
                     </div>
                 </div>
 
@@ -362,6 +362,11 @@
                     <div class="contact-item">
                         <h4>🕐 Hours</h4>
                         <p>Monday - Friday: 9:00 AM - 5:00 PM<br>Saturday: By Appointment<br>Sunday: Closed</p>
+                    </div>
+                    <div class="contact-item" id="gigisafehouse">
+                        <h4>🏠 gigiSafeHOUSE</h4>
+                        <p>Learn more about our nonprofit mission to remove barriers to healthcare access.<br>
+                        <em>Landing page coming soon!</em></p>
                     </div>
                 </div>
                 <div class="contact-form">
