--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -135,7 +135,7 @@
                     </div>
                     <div class="team-info">
                         <h3>Gigi</h3>
-                        <p class="team-title">Practice Manager & Wellness Coach</p>
+                        <p class="team-title">Practice Manager & Wellness Coach | gigiSafeHOUSE Founder</p>
                         <p class="team-bio">Gigi brings passion and dedication to every aspect of patient care at Garcia Family Medicine. As Practice Manager and Wellness Coach, she ensures that every patient receives compassionate support throughout their healthcare journey. Gigi is also the founder of <a href="#gigisafehouse">gigiSafeHOUSE</a>, a nonprofit dedicated to removing barriers to healthcare access.</p>
                     </div>
                 </div>
@@ -147,7 +147,7 @@
                     <div class="team-info">
                         <h3>Marisela</h3>
                         <p class="team-title">Medical Assistant & Translator</p>
-                        <p class="team-bio">Marisela provides compassionate medical assistance and bilingual support to ensure all patients receive quality care in their preferred language. Her expertise in both clinical support and translation services helps bridge communication gaps and creates a welcoming environment for our diverse patient community.</p>
+                        <p class="team-bio">Marisela provides compassionate medical assistance and professional bilingual translation support to ensure all patients receive quality care in their preferred language. Her expertise in both clinical support and Spanish-English translation services helps bridge communication gaps and creates a welcoming environment for our diverse patient community.</p>
                     </div>
                 </div>
 
@@ -170,6 +170,33 @@
         <div class="container">
             <h2 class="section-title">Our Services</h2>
             <p class="section-subtitle">Comprehensive care tailored to your needs</p>
+
+            <!-- DPC Membership - FIRST SERVICE -->
+            <div id="dpc" class="service-box">
+                <div class="service-image">
+                    <img src="family_business4_png.jpg" alt="Direct Primary Care">
+                </div>
+                <div class="service-content">
+                    <h3>Direct Primary Care Membership</h3>
+                    <div class="service-short">
+                        <p><strong>Skip the insurance hassle. Get unlimited access to your doctor for one simple monthly fee.</strong> No copays, no deductibles, just quality healthcare focused on you.</p>
+                    </div>
+                    <div class="service-full hidden">
+                        <ul class="service-benefits">
+                            <li>Unlimited office visits with no copays</li>
+                            <li>Same or next-day appointments</li>
+                            <li>Direct phone/text access to Dr. Garcia</li>
+                            <li>30-60 minute unhurried appointments</li>
+                            <li>Basic lab work at cost</li>
+                            <li>Medications at wholesale prices</li>
+                            <li>Individual and family plans available</li>
+                            <li>No hidden fees or surprise bills</li>
+                        </ul>
+                        <p class="service-cta">Healthcare the way it should be. Contact us to become a member!</p>
+                    </div>
+                    <button class="read-more-toggle" onclick="toggleReadMore(this)">Read More</button>
+                </div>
+            </div>
 
             <!-- CoreLift Service -->
             <div id="corelift" class="service-box">
@@ -312,28 +339,28 @@
                 </div>
             </div>
 
-            <!-- DPC Membership -->
-            <div id="dpc" class="service-box">
+            <!-- DOT Physicals - NEW SERVICE -->
+            <div id="dot-physicals" class="service-box">
                 <div class="service-image">
-                    <img src="family_business4_png.jpg" alt="Direct Primary Care">
+                    <img src="dot_physical.jpg" alt="DOT Physicals">
                 </div>
                 <div class="service-content">
-                    <h3>Direct Primary Care Membership</h3>
+                    <h3>DOT Physicals</h3>
                     <div class="service-short">
-                        <p><strong>Skip the insurance hassle. Get unlimited access to your doctor for one simple monthly fee.</strong> No copays, no deductibles, just quality healthcare focused on you.</p>
+                        <p><strong>Certified DOT physical examinations for commercial drivers.</strong> Dr. Garcia is a certified medical examiner providing thorough, efficient DOT physicals to keep you on the road.</p>
                     </div>
                     <div class="service-full hidden">
                         <ul class="service-benefits">
-                            <li>Unlimited office visits with no copays</li>
-                            <li>Same or next-day appointments</li>
-                            <li>Direct phone/text access to Dr. Garcia</li>
-                            <li>30-60 minute unhurried appointments</li>
-                            <li>Basic lab work at cost</li>
-                            <li>Medications at wholesale prices</li>
-                            <li>Individual and family plans available</li>
-                            <li>No hidden fees or surprise bills</li>
+                            <li>FMCSA certified medical examiner</li>
+                            <li>Complete DOT physical examinations</li>
+                            <li>Medical Examiner's Certificate (MEC) issued on-site</li>
+                            <li>Same-day appointments available</li>
+                            <li>Vision and hearing screenings</li>
+                            <li>Blood pressure and urinalysis testing</li>
+                            <li>Quick turnaround for busy drivers</li>
+                            <li>Convenient Blue Springs location</li>
                         </ul>
-                        <p class="service-cta">Healthcare the way it should be. Contact us to become a member!</p>
+                        <p class="service-cta">Get your DOT physical and get back on the road. Call to schedule!</p>
                     </div>
                     <button class="read-more-toggle" onclick="toggleReadMore(this)">Read More</button>
                 </div>
@@ -383,6 +410,7 @@
                             <option value="mental-health">Mental Health Counseling</option>
                             <option value="wellness">Wellness Coaching</option>
                             <option value="ime">Independent Medical Evaluation</option>
+                            <option value="dot">DOT Physical</option>
                             <option value="other">Other Services</option>
                         </select>
                         <textarea rows="4" placeholder="Your Message"></textarea>
