--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -510,7 +510,7 @@
             <!-- DOT Physicals - SERVICE -->
             <div id="dot-physicals" class="service-box">
                 <div class="service-image">
-                    <img src="dot_physical.jpg" alt="DOT Physicals">
+                    <img src="injury_work_accident6_png.jpg" alt="DOT Physicals">
                 </div>
                 <div class="service-content">
                     <h3>DOT Physicals</h3>
@@ -687,6 +687,14 @@
             </div>
         </div>
     </div>
+
+    <!-- Back to Top Button -->
+    <button id="backToTop" class="back-to-top" onclick="scrollToTop()" title="Back to Top">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <polyline points="18 15 12 9 6 15"></polyline>
+        </svg>
+        <span>Back to Top</span>
+    </button>
 
     <script src="script.js"></script>
 </body>
