--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -141,7 +141,7 @@
 
                 <div class="team-card">
                     <div class="team-photo">
-                        <img src="Gigi_Orange.png" alt="Gigi">
+                        <img src="Gigi_left.png" alt="Gigi">
                     </div>
                     <div class="team-info">
                         <h3>Gigi</h3>
@@ -510,7 +510,7 @@
             <!-- DOT Physicals - SERVICE -->
             <div id="dot-physicals" class="service-box">
                 <div class="service-image">
-                    <img src="injury_work_accident6_png.jpg" alt="DOT Physicals">
+                    <img src="__semi_truck12_png.jpg" alt="DOT Physicals">
                 </div>
                 <div class="service-content">
                     <h3>DOT Physicals</h3>
@@ -670,7 +670,7 @@
                 
                 <ul class="exit-benefits">
                     <li>✓ Personalized weight loss plan with Dr. Garcia</li>
-                    <li>✓ Prescription medications (Semaglutide, Phentermine, and more)</li>
+                    <li>✓ Prescription medications (Semaglutide and other non-controlled options)</li>
                     <li>✓ Monthly check-ins and progress monitoring</li>
                     <li>✓ Nutrition and lifestyle coaching with Gigi</li>
                     <li>✓ No insurance needed - affordable care for everyone</li>
