--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -141,7 +141,7 @@
 
                 <div class="team-card">
                     <div class="team-photo">
-                        <img src="Gigi_left.png" alt="Gigi">
+                        <img src="Gigi_Orange.png" alt="Gigi">
                     </div>
                     <div class="team-info">
                         <h3>Gigi</h3>
@@ -585,6 +585,83 @@
                     <button class="read-more-toggle" onclick="toggleReadMore(this)">Read More</button>
                 </div>
             </div>
+
+            <!-- Opioid-Free Pain Management - SERVICE -->
+            <div id="pain-management" class="service-box">
+                <div class="service-image">
+                    <img src="pain_management.jpg" alt="Opioid-Free Pain Management">
+                </div>
+                <div class="service-content">
+                    <h3>Opioid-Free Pain Management</h3>
+                    <div class="service-short">
+                        <p><strong>Effective pain relief without opioids.</strong> Dr. Garcia provides comprehensive pain management solutions focused on safe, non-addictive alternatives.</p>
+                    </div>
+                    <div class="service-full hidden">
+                        <p><em>Detailed information about opioid-free pain management will be added by Dr. Tess.</em></p>
+                        <p class="service-cta">Schedule a consultation to discuss your pain management options.</p>
+                    </div>
+                    <button class="read-more-toggle" onclick="toggleReadMore(this)">Read More</button>
+                </div>
+            </div>
+
+            <!-- CareCredit Financing - SERVICE -->
+            <div id="carecredit" class="service-box">
+                <div class="service-image">
+                    <img src="carecredit_financing.jpg" alt="CareCredit Financing">
+                </div>
+                <div class="service-content">
+                    <h3>CareCredit® Financing - 0% Interest Available</h3>
+                    <div class="service-short">
+                        <p><strong>Healthcare financing made easy with 0% interest options.</strong> CareCredit helps you pay for healthcare expenses not covered by insurance, allowing you to get the care you need now and pay over time.</p>
+                    </div>
+                    <div class="service-full hidden">
+                        <p><strong>What is CareCredit?</strong></p>
+                        <p>CareCredit is a healthcare credit card designed specifically for your health and wellness needs. It's accepted at over 250,000 healthcare providers nationwide, including Garcia Family Medicine. With CareCredit, you can pay for out-of-pocket expenses not covered by insurance, making quality healthcare more accessible and affordable.</p>
+
+                        <p><strong>Special Financing Options:</strong></p>
+                        <ul class="service-benefits">
+                            <li><strong>0% Interest if Paid in Full Within 6, 12, 18, or 24 Months:</strong> On purchases of $200 or more (terms vary by provider)</li>
+                            <li><strong>No Annual Fee:</strong> Your CareCredit card has no annual fees</li>
+                            <li><strong>Instant Decisions:</strong> Apply online and get a decision in seconds</li>
+                            <li><strong>Use Again and Again:</strong> Once approved, you can use your card for future healthcare expenses</li>
+                            <li><strong>Family Coverage:</strong> Use your card for family members' healthcare needs too</li>
+                        </ul>
+
+                        <p><strong>What Can CareCredit Cover at Garcia Family Medicine?</strong></p>
+                        <ul class="service-benefits">
+                            <li>Direct Primary Care membership fees</li>
+                            <li>Weight Management program costs</li>
+                            <li>CoreLift pelvic health treatments</li>
+                            <li>Mental health counseling sessions</li>
+                            <li>Wellness coaching services</li>
+                            <li>Independent Medical Evaluations</li>
+                            <li>DOT physicals</li>
+                            <li>Any out-of-pocket medical expenses</li>
+                        </ul>
+
+                        <p><strong>How It Works:</strong></p>
+                        <p><strong>1. Apply:</strong> Complete a simple online application at carecredit.com or apply in our office. You'll receive a credit decision in seconds.</p>
+                        <p><strong>2. Get Approved:</strong> Once approved, you'll receive a credit limit that you can use immediately for your healthcare needs.</p>
+                        <p><strong>3. Use Your Card:</strong> Present your CareCredit card for payment at Garcia Family Medicine, just like any other credit card.</p>
+                        <p><strong>4. Pay Over Time:</strong> Choose from flexible payment options with promotional financing available. Make monthly payments that fit your budget.</p>
+
+                        <p><strong>Who Should Consider CareCredit?</strong></p>
+                        <ul class="service-benefits">
+                            <li>Patients without insurance coverage</li>
+                            <li>Those with high deductibles or copays</li>
+                            <li>Anyone wanting to budget for healthcare expenses</li>
+                            <li>Patients seeking elective services like weight management or wellness coaching</li>
+                            <li>Families managing multiple healthcare needs</li>
+                        </ul>
+
+                        <p><strong>Ready to Apply?</strong></p>
+                        <p>Visit <a href="https://www.carecredit.com" target="_blank" rel="noopener noreferrer">www.carecredit.com</a> to apply online, or ask our staff about applying during your next visit. We're here to help you understand your financing options and make quality healthcare affordable.</p>
+
+                        <p class="service-cta"><em>*Subject to credit approval. Minimum monthly payments required. 0% promotional financing options available on purchases of $200 or more. Interest will be charged to your account from the purchase date if the promotional balance is not paid in full within the promotional period. See carecredit.com for details.</em></p>
+                    </div>
+                    <button class="read-more-toggle" onclick="toggleReadMore(this)">Read More</button>
+                </div>
+            </div>
             </div>
         </div>
     </section>
@@ -632,6 +709,8 @@
                             <option value="wellness">Wellness Coaching</option>
                             <option value="ime">Independent Medical Evaluation</option>
                             <option value="dot">DOT Physical</option>
+                            <option value="pain-management">Opioid-Free Pain Management</option>
+                            <option value="carecredit">CareCredit Financing</option>
                             <option value="other">Other Services</option>
                         </select>
                         <textarea rows="4" placeholder="Your Message"></textarea>
